--- a/locator.html
+++ b/locator.html
@@ -61,7 +61,7 @@
 				
 				<div class="col-md-9 col-md-offset-0 col-sm-9 col-sm-offset-0 col-xs-10 col-xs-offset-1">
 						
-						<iframe src="http://localhost:8887/geog575final/index.html" style="width: 100%; height: 65vh; "style="border: none;" class="center-block img-responsive;" allow="fullscreen"></iframe>	
+						<iframe src="http://localhost:8887/finalLocatorLeafet/index.html" style="width: 100%; height: 65vh; "style="border: none;" class="center-block img-responsive;" allow="fullscreen"></iframe>	
 				</div>
 			</div>
 		
