--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 			 			
 			<a href = "http://localhost:8887/final575MPG/District_Facts.html" <div id = "panel", button type="button" class="btn btn-primary">District Facts</button></a>
 			<br>
-			<a <div id = "panel", button type="button" class="btn btn-primary">High School Facts</button></a>
+			<a href = "http://localhost:8887/final575MPG/High_Facts.html" <div id = "panel", button type="button" class="btn btn-primary">High School Facts</button></a>
 			<br>
-			<a <div id = "panel", button type="button" class="btn btn-primary">Middle School Facts</button></a>
+			<a href = "http://localhost:8887/final575MPG/Middle_Facts.html" <div id = "panel", button type="button" class="btn btn-primary">Middle School Facts</button></a>
 			<br>
-			<a <div id = "panel", button type="button" class="btn btn-primary">Elementary School Facts</button></a>
+			<a href = "http://localhost:8887/final575MPG/Elementary_Facts.html" <div id = "panel", button type="button" class="btn btn-primary">Elementary School Facts</button></a>
 			<br>
 			<a <div id = "panel", button type="button" class="btn btn-primary">City of Eau Claire Facts</button></a>
 			<br>
