--- a/Middle_Facts.html
+++ b/Middle_Facts.html
@@ -21,7 +21,7 @@
 		<script type="text/javascript" src="lib/d3-selection-multi.min.js"></script>
 		<script type="text/javascript" src="lib/simple-statistics.min.js"></script>
 		<script type="text/javascript" src="lib/topojson.min.js"></script>
-		<script type="text/javascript" src="js/main_d3District.js"></script>
+		<script type="text/javascript" src="js/main_d3MS.js"></script>
   	    </div>
 
 		
