--- a/about.html
+++ b/about.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link rel="shortcut icon" href="img/fav.png" />
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Particulate Matter</title>
+		<meta name="viewport" content="width=device-width">
+		<title>Martin's Maps School Matters</title> 
+		
+		<link rel="shortcut icon" type="image/x-icon" href="img/fav.png" />
 		
 		<!--put your Bootstrap stylesheet links below this comment and above style.css-->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
