--- a/locator.html
+++ b/locator.html
@@ -4,7 +4,7 @@
 		<link rel="shortcut icon" href="img/fav.png" />
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title>Martin's Maps - Schools Matter</title>
+		<title>Martin's Maps School Matters</title>
 		
 		<link rel="shortcut icon" type="image/x-icon" href="img/fav.png" />
 		
