--- a/District_Facts.html
+++ b/District_Facts.html
@@ -15,9 +15,7 @@
 		
 		
 		
-		<!--[if IE<9]>
-			<link rel="stylesheet" href="css/style.ie.css">
-		<![endif]-->
+		
 	</head>
 
 	<body>
@@ -70,36 +68,36 @@
 				
 			<div class="btn-group-vertical" role="group" aria-label="Vertical button group">
 			 			
-			<a href= "http://localhost:8887/final575MPG/District_Facts.html" target="_blank" <div id = "panel" button type="button" class="btn btn-primary" >District Facts</button></a>
+			<a href = "http://localhost:8887/final575MPG/District_Facts.html" id = "panel", button type="button" class="btn btn-primary active"  >District Facts</button></a>
 			<br>
-			<a href = "http://localhost:8887/final575MPG/High_Facts.html" <div id = "panel", button type="button" class="btn btn-primary">High School Facts</button></a>
+			<a href = "http://localhost:8887/final575MPG/High_Facts.html" id = "panel", button type="button" class="btn btn-primary active">High School Facts</button></a>
 			<br>
-			<a href = "http://localhost:8887/final575MPG/Middle_Facts.html" <div id = "panel", button type="button" class="btn btn-primary">Middle School Facts</button></a>
+			<a href = "http://localhost:8887/final575MPG/Middle_Facts.html" id = "panel", button type="button" class="btn btn-primary active">Middle School Facts</button></a>
 			<br>
-			<a href = "http://localhost:8887/final575MPG/Elementary_Facts.html" <div id = "panel", button type="button" class="btn btn-primary">Elementary School Facts</button></a>
+			<a href = "http://localhost:8887/final575MPG/Elementary_Facts.html" id = "panel", button type="button" class="btn btn-primary active">Elementary School Facts</button></a>
 			<br>
-			<a <div id = "panel", button type="button" class="btn btn-primary">City of Eau Claire Facts</button></a>
+			<a id = "panel", button type="button" class="btn btn-primary active">City of Eau Claire Facts</button></a>
 			<br>
-			<a <div id = "panel", button type="button" class="btn btn-primary">Eau Claire County Facts</button></a>
+			<a id = "panel", button type="button" class="btn btn-primary active">Eau Claire County Facts</button></a>
 			<br>
-			<a href = "http://localhost:8887/geog575final/index.html" target = "_blank" <div id = "panel", button type="button" class="btn btn-primary">School Locator</button></a>
+			<a href = href = "http://localhost:8887/final575MPG/locator.html" id = "panel", button type="button" class="btn btn-primary active">School Locator</button></a>
 			<br>
-			<a <div id = "panel", button type="button" class="btn btn-primary">Sources</button></a>
+			<a id = "panel", button type="button" class="btn btn-primary active">Sources</button></a>
 			
 		  </div>
 		  </div>
 			
-		</div>
+		
 	</div>
-		
-
-		
-		</div></div></div></div></div></div></div>
+	</div>
+	
 		<script type="text/javascript" src="lib/d3.js"></script>
 		<script type="text/javascript" src="lib/d3-selection-multi.min.js"></script>
 		<script type="text/javascript" src="lib/simple-statistics.min.js"></script>
 		<script type="text/javascript" src="lib/topojson.min.js"></script>
 		<script type="text/javascript" src="js/main_d3District.js"></script>
+		
+		
 		
 	</body>
 </html>
