--- a/District_Facts.html
+++ b/District_Facts.html
@@ -80,7 +80,7 @@
 			<br>
 			<a id = "panel", button type="button" class="btn btn-primary active">Eau Claire County Facts</button></a>
 			<br>
-			<a href = href = "http://localhost:8887/final575MPG/locator.html" id = "panel", button type="button" class="btn btn-primary active">School Locator</button></a>
+			<a href = "https://mpgoettl.github.io/finalLocatorLeaflet/" id = "panel", button type="button" class="btn btn-primary active">School Locator</button></a>
 			<br>
 			<a id = "panel", button type="button" class="btn btn-primary active">Sources</button></a>
 			
