--- a/High_Facts.html
+++ b/High_Facts.html
@@ -52,7 +52,7 @@
 
     <div class="jumbotron">
       <div class="container">
-        
+        <h2>High School Report Card Facts</h2>
       </div>
     </div>
 	
