--- a/Elementary_Facts.html
+++ b/Elementary_Facts.html
@@ -51,10 +51,10 @@
 		</nav> <!--/navigation bar -->
 
     <div class="jumbotron">
-      <div class="container">
-        
-      </div>
-    </div>
+			<div class="container">
+				<h2>Elementary School Report Card Facts</h2>
+			</div>
+		</div>
 	
 	
 		
