--- a/District_Facts.html
+++ b/District_Facts.html
@@ -54,7 +54,7 @@
 	
 	<div class="jumbotron">
 			<div class="container">
-				<h2>District Facts</h2>
+				<h2>Eau Claire School District Report Card Facts</h2>
 			</div>
 		</div>
 		
@@ -76,7 +76,7 @@
 			<br>
 			<a href = "http://localhost:8887/final575MPG/Elementary_Facts.html" id = "panel", button type="button" class="btn btn-primary active">Elementary School Facts</button></a>
 			<br>
-			<a id = "panel", button type="button" class="btn btn-primary active">City of Eau Claire Facts</button></a>
+			<a href = https://www.eauclairedevelopment.com/doing-business/demographics/" id = "panel", button type="button" class="btn btn-primary active">City of Eau Claire Facts</button></a>
 			<br>
 			<a id = "panel", button type="button" class="btn btn-primary active">Eau Claire County Facts</button></a>
 			<br>
