--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<br>
 			<a href = "http://localhost:8887/final575MPG/Elementary_Facts.html"  id = "panel", button type="button" class="btn btn-primary active">Elementary School Facts</button></a>
 			<br>
-			<a href = https://www.eauclairedevelopment.com/doing-business/demographics/" id = "panel", button type="button" class="btn btn-primary active">City of Eau Claire Facts</button></a>
+			<a href = "https://www.eauclairedevelopment.com/doing-business/demographics/" id = "panel", button type="button" class="btn btn-primary active">City of Eau Claire Facts</button></a>
 			<br>
 			<a id = "panel", button type="button" class="btn btn-primary active">Eau Claire County Facts</button></a>
 			<br>
