--- a/Elementary_Facts.html
+++ b/Elementary_Facts.html
@@ -76,9 +76,7 @@
 			<br>
 			<a href = "https://mpgoettl.github.io/final575MPG/Elementary_Facts.html"  id = "panel", button type="button" class="btn btn-primary active">Elementary School Facts</button></a>
 			<br>
-			<a href = "https://www.eauclairedevelopment.com/doing-business/demographics/" id = "panel", button type="button" class="btn btn-primary active">City of Eau Claire Facts</button></a>
-			<br>
-			<a id = "panel", button type="button" class="btn btn-primary active">Eau Claire County Facts</button></a>
+			<a href = "https://www.eauclaire-wi.com/demographics/" id = "panel", button type="button" class="btn btn-primary active">Eau Claire City/County Facts</button></a>
 			<br>
 			<a href = "https://mpgoettl.github.io/finalLocatorLeaflet/" target="_blank"  id = "panel", button type="button" class="btn btn-primary active">School Locator</button></a>
 			<br>
