--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <span class="sr-only">Toggle navigation</span>
 						<span class="glyphicon glyphicon-menu-hamburger"></span><span class="mobile-menu"> Menu</span>
 		      </button> <!-- Hamburger button for smaller devices -->
-					<a class="navbar-brand" href="index.html">Particulate Matter | home</a> <!-- Brand -->
+					<a class="navbar-brand" href="index.html">District Information | Disclaimer</a> <!-- Brand -->
 		    </div>
 
 		    
