--- a/locator.html
+++ b/locator.html
@@ -32,13 +32,13 @@
 	            	<span class="icon-bar hamburger"></span> 
 	          </button>			
 								
-					<a class="navbar-brand" href="index.html">District Information | home</a> <!-- Brand -->
+					<a class="navbar-brand" href="index.html">District Information | Disclaimer</a> <!-- Brand -->
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div id="navbar" class="collapse navbar-collapse">
 		      <ul class="nav navbar-nav">
-				<li><a href="about.html">About</a></li>
+				<li><a href="about.html">Help</a></li>
 				</ul>
 		    </div> <!--/.navbar-collapse -->
 		  </div> <!--/.container -->
