--- a/about.html
+++ b/about.html
@@ -103,18 +103,7 @@
 					
 			</div>
 			
-			<div class="container">
-      <div class="row">
-		<p class="text-center"><br>
-			<a href="mailto:mgoettl@wisc.edu"</a> <img src="img/email.png" alt="" style="width:5%" />
-			<a href ="https://www.linkedin.com/in/martingoettl/"</a> <img src="img/LinkedIn.png" alt="" style="width:5%" />
-			<a href ="https://twitter.com/mpgoettl?lang=en"</a> <img src="img/twitter.png" alt="" style="width:5%" /></p>
-			
-		<!--put your external script links here-->
-		<script type="text/javascript" src="lib/jquery-1.11.3.js"></script>
-		<script type="text/javascript" src="lib/bootstrap.min.js"></script>
-		</div>
-	</div>
+			</div></div>
 	
 	</body>
 </html>
