--- a/Middle_Facts.html
+++ b/Middle_Facts.html
@@ -82,7 +82,7 @@
 			<br>
 			<a href = "https://mpgoettl.github.io/finalLocatorLeaflet/" target="_blank"  id = "panel", button type="button" class="btn btn-primary active">School Locator</button></a>
 			<br>
-			<a id = "panel", button type="button" class="btn btn-primary active">Sources</button></a>
+			<a href = "https://mpgoettl.github.io/final575MPG/sources.html" id = "panel", button type="button" class="btn btn-primary active">Sources</button></a>
 			
 		  </div>
 		  </div>
