--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 			<div class="col-md-9 col-md-offset-0 col-sm-9 col-sm-offset-0 col-xs-10 col-xs-offset-1">
 
 					<p><br>
+					Disclaimer:
 						This website and interactive map was created as part of a lab from Geography 575.  
 						The purpose of the whole project was to be able to Operate JavaScript, JQuery, and the 
 						Leaflet.js mapping library. Assemble and dynamically load a spatiotemporal information 
