--- a/sources.html
+++ b/sources.html
@@ -94,10 +94,10 @@
 					<p><br>
 						Sources:
 						<br>
-						<a href="https://dpi.wi.gov/"><h2>Wisconsin Department of Public Instruction</h2></a><br><br>
+						<h2><a href="https://dpi.wi.gov/">Wisconsin Department of Public Instruction</a><br><br>
 						<a href="https://apps2.dpi.wi.gov/reportcards/home">WI DPI School Report Cards</a><br><br>
 						<a href="http://ecasd.us/District/Home">Eau Claire Area School Dstrict</a><br><br>
-						<a href="https://www.eauclaire-wi.com/demographics/">Eau Claire Area Economic Development Corporation</a>
+						<a href="https://www.eauclaire-wi.com/demographics/">Eau Claire Area Economic Development Corporation</a></h2>
 						
 					</p>
 					
