--- a/sources.html
+++ b/sources.html
@@ -52,7 +52,7 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h2></h2>
+        <h2>Sources</h2>
       </div>
     </div>
 	
