--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
 						--> Click on the High School Facts Tab to find information related to the District High Schools from the WI DPI Report Card.<br>						
 						--> Click on the Middle School Facts Tab to find information related to the District Middle Schools from the WI DPI Report Card.<br>						
 						--> Click on the Elementary School Facts Tab to find information related to the District Elementary Schools from the WI DPI Report Card.<br>
-						<p>&emsp;Click on the dropdown on each of above 4 Tabs to change your variable.</p><br>
+						&emsp;Click on the dropdown on each of above 4 Tabs to change your variable.<br>
 						There are tooltips with labels to assist you on the map.<br>
 						--> Click on the Eau Claire City/County Facts Tab to find information related to the City or the County of Eau Claire.<br><br>
 						
